Fix/blocked device refactor (#24)
* feat(unit tests): temp commit, resolve device test added

* fix(tests): remove tests from this commit

* fix(device): device refactored, added open not-secured controller
